--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="board" layout-manager="GridLayoutManager" row-count="4" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="875" height="496"/>
+      <xy x="20" y="20" width="875" height="498"/>
     </constraints>
     <properties>
       <background color="-6231077"/>
@@ -51,7 +51,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="5086d" class="javax.swing.JLabel" binding="labelSearchDate">
+      <component id="5086d" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -128,11 +128,6 @@
               <text value="Order ToDo by Title"/>
             </properties>
           </component>
-          <vspacer id="22882">
-            <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
           <vspacer id="33cc9">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
@@ -182,9 +177,20 @@
               <text value="Delete ToDo"/>
             </properties>
           </component>
+          <component id="716a8" class="javax.swing.JButton" binding="changeBoard">
+            <constraints>
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1114125"/>
+              <text value="Change Board"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <component id="9c1b9" class="javax.swing.JLabel" binding="labelSearch">
+      <component id="9c1b9" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
