--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -3,20 +3,20 @@
   <grid id="27dc6" binding="board" layout-manager="GridLayoutManager" row-count="4" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="875" height="498"/>
+      <xy x="20" y="20" width="875" height="548"/>
     </constraints>
     <properties>
       <background color="-6231077"/>
     </properties>
     <border type="none"/>
     <children>
-      <component id="52c7b" class="javax.swing.JLabel">
+      <component id="52c7b" class="javax.swing.JLabel" binding="campo3">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Brush Script MT" size="36" style="1"/>
-          <foreground color="-16212568"/>
+          <foreground color="-16777216"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Galatea Workspace"/>
@@ -41,7 +41,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1114125"/>
+        </properties>
       </component>
       <component id="e95f0" class="javax.swing.JTextField" binding="textFieldSearchDate">
         <constraints>
@@ -51,17 +53,18 @@
         </constraints>
         <properties/>
       </component>
-      <component id="5086d" class="javax.swing.JLabel">
+      <component id="5086d" class="javax.swing.JLabel" binding="campo4">
         <constraints>
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1114125"/>
           <font name="Elephant" size="14" style="0"/>
-          <foreground color="-16212568"/>
+          <foreground color="-16777216"/>
           <text value="Search by Date"/>
         </properties>
       </component>
-      <grid id="636b1" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="636b1" binding="campo1" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -75,12 +78,12 @@
         <children>
           <component id="4f6ef" class="javax.swing.JComboBox" binding="comboBoxBoards">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-16212568"/>
+              <foreground color="-16777216"/>
               <model/>
             </properties>
           </component>
@@ -89,9 +92,9 @@
               <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Share Board"/>
             </properties>
           </component>
@@ -100,9 +103,9 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Today DueDate"/>
             </properties>
           </component>
@@ -111,9 +114,9 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Add ToDo"/>
             </properties>
           </component>
@@ -122,25 +125,20 @@
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Order ToDo by Title"/>
             </properties>
           </component>
-          <vspacer id="33cc9">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
           <component id="165e8" class="javax.swing.JButton" binding="MoveUp">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="MoveUp"/>
             </properties>
           </component>
@@ -149,9 +147,9 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Order ToDo By Date"/>
             </properties>
           </component>
@@ -160,9 +158,9 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="MoveDown"/>
             </properties>
           </component>
@@ -171,9 +169,9 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Delete ToDo"/>
             </properties>
           </component>
@@ -182,22 +180,35 @@
               <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Change Board"/>
+            </properties>
+          </component>
+          <component id="467b9" class="javax.swing.JComboBox" binding="colorChange">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <model>
+                <item value="Color"/>
+              </model>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="9c1b9" class="javax.swing.JLabel">
+      <component id="9c1b9" class="javax.swing.JLabel" binding="campo2">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1114125"/>
           <font name="Elephant" size="14" style="0"/>
-          <foreground color="-16212568"/>
+          <foreground color="-16777216"/>
           <text value="Search by Title"/>
         </properties>
       </component>
